Fix packets and a bunch of other compile errors.